# Perturbgen

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python_check.yml
T_perturb/: requirements.txt  run_cytoimmgen_train_count.sh  run_cytoimmgen_train_masking.sh  run_eb_train_masking.sh  run_sweep.sh  run_test.sh  run_train_count.sh  run_train_masking.sh  sweep-count.yaml  train.py  val.py
T_perturb/Dataloaders/: datamodule.py
T_perturb/Model/: __init__.py  metric.py  trainer.py
T_perturb/Modules/: T_model.py  datamodule.py  losses.py
T_perturb/Perturb/: T_model.py  datamodule.py  quantize.py  trainer.py  val.py
T_perturb/batch_job_script/cytoimmgen/: 1_run_GF_tokenisation.sh  2.1_run_val_return_embed.sh  2_run_train_masking_GF_frozen_all_timepoints.sh  2_run_train_masking_GF_frozen_extrapolation.sh  2_run_train_masking_GF_frozen_interpolation.sh  3_run_train_count_GF_frozen_all_timepoints.sh  3_run_train_count_GF_frozen_extrapolation.sh  3_run_train_count_GF_frozen_interpolation.sh  4_run_val_generate_extrapolation.sh  4_run_val_generate_guided.sh  4_run_val_generate_interpolation.sh  run_GF_tokenisation.sh  run_encoder_masking.sh  run_train_count.sh  run_train_count_GF_fine_tuned.sh  run_train_count_GF_fine_tuned_extrapolation.sh  run_train_count_GF_fine_tuned_interpolation.sh  run_train_embedding.sh  run_train_encoder_count.sh  run_train_encoder_masking.sh  run_train_masking.sh  run_train_masking_GF_fine_tuned.sh  run_train_masking_GF_fine_tuned_extrapolation.sh  run_train_masking_GF_fine_tuned_interpolation.sh  run_val_encoder_generate.sh  run_val_encoder_return_embed.sh  run_val_generate.sh  run_val_return_embed.sh
T_perturb/batch_job_script/eb/: 1_run_GF_tokenisation.sh  2_run_train_masking_GF_frozen_extrapolation.sh  2_run_train_masking_GF_frozen_interpolation.sh  3_run_train_count_extrapolation.sh  3_run_train_count_interpolation.sh  4_run_val_generate_extrapolation.sh  4_run_val_generate_interpolation.sh  run_GF_tokenisation.sh  run_extrapolate_ablation_count.sh  run_extrapolate_ablation_masking.sh  run_train_count.sh  run_train_masking.sh  run_val_generate.sh
T_perturb/batch_job_script/hspc/: 1_run_GF_tokenisation_hspc.sh  1_run_GF_tokenisation_mnc.sh  2.1_run_val_return_cos_sim.sh  2.1_run_val_return_embed.sh  2.1_run_val_return_gene_embs copy.sh  2.1_run_val_return_gene_embs.sh  2.2_run_val_generate_stratified.sh  2_run_train_counts_GF_frozen_all_inter_timepoints_tissue.sh  2_run_train_counts_GF_frozen_all_tf_timepoints_tissue.sh  2_run_train_counts_GF_frozen_all_timepoints.sh  2_run_train_counts_GF_frozen_all_timepoints_tissue.sh  2_run_train_counts_GF_frozen_inter_term_tissue.sh  2_run_train_counts_GF_frozen_inter_tf_timepoints_tissue.sh  2_run_train_counts_GF_frozen_inter_timepoints_tissue.sh  2_run_train_counts_GF_frozen_pert.sh  2_run_train_masking_GF_frozen_all_inter_timepoints_tissue.sh  2_run_train_masking_GF_frozen_all_tf_timepoints_tissue.sh  2_run_train_masking_GF_frozen_all_timepoints.sh  2_run_train_masking_GF_frozen_all_timepoints_tissue.sh  2_run_train_masking_GF_frozen_inter_term_tissue.sh  2_run_train_masking_GF_frozen_inter_tf_timepoints_tissue.sh  2_run_train_masking_GF_frozen_inter_timepoints_tissue.sh  2_run_train_masking_GF_frozen_pert.sh  2_run_train_masking_GF_frozen_stratified.sh  3_perturb.sh  4_run_plotting_perturb_res.sh
T_perturb/batch_job_script/lps/: 1_run_GF_tokenisation.sh  2_run_train_masking_Encoder_extrapolation.sh  3_new.sh  (+6 more)
T_perturb/configs/: sweep-count.yaml  sweep-cyto-count.yaml  sweep-eb-masking.yaml  sweep-generate.yaml  sweep-masking.yaml
T_perturb/iclr/: compute_averages.py
T_perturb/plt/: gf_embedding.py  gf_fine_tuned.py  plt_embedding.py
T_perturb/pp/: GF_tokenisation.py  cell_pairing.py  mpl_style.mplstyle
T_perturb/src/: metric.py  mmd.py  optimal_transport.py  utils.py
T_perturb/tests/: test_adata_reproducibility.py  test_cellgen_testing.py  test_cellgen_training.py  test_ckpt_reproducibility.py  test_countdecoder_training.py  test_perturbation.ipynb  test_return_embedding.py
benchmarking/: mioflow.py
cytomeister/: __main__.py  run_sweep.sh  run_test.sh  train.py  val.py
cytomeister/Model/: trainer.py
cytomeister/Modules/: T_model.py
cytomeister/Perturb/: trainer.py  val.py
cytomeister/plt/: gf_embedding.py  plt_embedding.py
cytomeister/pp/: GF_tokenisation.py  __init__.py  median_trace_subsetgeneformertokenid.pkl  mpl_style.mplstyle  plt_tokenisation.py  tokenid_trace_subsetfeneformer.pkl
cytomeister/src/: utils.py
cytomeister/tests/: test_cellgen_testing.py  test_cellgen_training.py  test_ckpt_reproducibility.py  test_countdecoder_training.py  test_perturbation.ipynb  test_return_embedding.py
docs/: Makefile  conf.py  docs-development.rst  index.rst  installation.rst  tutorial.rst
docs/examples/: 01_preprocessing_and_curation.ipynb  01_preprocessing_curation.ipynb  02_tokenization_pairing.ipynb  02_tokenize_and_train.ipynb  03_analysis.ipynb  03_train_perturbgen.ipynb  04_GeneEmbedding_Extraction.ipynb  06_perturbation.ipynb  07_PostPerturbation_Analyses.ipynb  Gene Embedding Analysis.ipynb  Post Perturbation Analysis.ipynb  Pre-Process - LPS data.ipynb  gene_embeddigs_tutorial.ipynb  gene_embeddings_90min_LPS_1364_genes.ipynb  task_0_embeddings.ipynb
lotfollibrary/Modules/: T_model.py
perturbgen/: __main__.py  train.py  val.py
perturbgen/pp/: GF_tokenisation.py
pretrain_cohort/: aggregate_medians.py  nonzero median expression
pretraining_cohort/preprocessing/: config_am74.yaml  harmonize_bronze_to_silver.py  launch_harmonize.sh
pretraining_cohort/tokenization/: tokenization.py
scmaskgit/: hpo.py  train.py  val.py
scmaskgit/Dataloaders/: datamodule.py
scmaskgit/Model/: __init__.py  trainer.py
scmaskgit/Modules/: T_model.py  __init__.py
scmaskgit/pp/: GF_tokenisation.py  mpl_style.mplstyle  plt_tokenisation.py
scmaskgit/src/: losses.py  metric.py  mmd.py  optimal_transport.py  utils.py
src/Modules/: T_model.py
(+823 files in other folders)
