[project]
name = "Cytomeister"
version = "0.1.0"
description = "Cell state and temporal prediction of scRNA-seq data"
authors = [
    {name = "kchl5",email = "k.ly@hotmail.ch"}
]
readme = "README.md"
requires-python = ">=3.11"
packages = [{ include = "cytomeister" }]

[project.scripts]
cytomeister = "cytomeister.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "2.2.0"
anndata = "0.11"
llvmlite = "0.44.0"
absl-py = "2.1.0"
accelerate = "1.2.0"
accumulation-tree = "0.6.4"
adjusttext = "1.3.0"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.11.10"
aiosignal = "1.3.1"
alembic = "1.14.0"
annotated-types = "0.7.0"
array-api-compat = "1.9.1"
asttokens = "2.4.1"
async-timeout = "5.0.1"
attrs = "24.2.0"
backports-tarfile = "1.2.0"
black = "22.1.0"
blue = "0.9.1"
build = "1.2.2.post1"
cachecontrol = "0.14.2"
certifi = "2024.8.30"
cffi = "1.17.1"
cfgv = "3.4.0"
charset-normalizer = "3.4.0"
chex = "0.1.87"
cleo = "2.1.0"
click = "8.1.7"
colorlog = "6.9.0"
comm = "0.2.2"
configspace = "1.2.1"
contextlib2 = "21.6.0"
contourpy = "1.3.1"
crashtest = "0.4.1"
cryptography = "44.0.0"
cycler = "0.12.1"
datasets = "3.0.0"
debugpy = "1.8.5"
decorator = "5.1.1"
deepspeed = "0.15.4"
deprecated = "1.2.14"
dill = "0.3.8"
distlib = "0.3.8"
docker-pycreds = "0.4.0"
docrep = "0.3.2"
dulwich = "0.22.7"
einops = "0.8.0"
et-xmlfile = "2.0.0"
etils = "1.11.0"
evaluate = "0.4.3"
exceptiongroup = "1.2.2"
executing = "2.1.0"
fastcluster = "1.2.6"
fastjsonschema = "2.21.1"
filelock = "3.16.1"
flake8 = "4.0.1"
flax = "0.10.2"
fonttools = "4.55.2"
frozenlist = "1.5.0"
fsspec = "2024.6.1"
future = "1.0.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
graphtools = "1.5.3"
greenlet = "3.1.1"
grpcio = "1.68.1"
gseapy = "1.1.4"
h5py = "3.12.1"
hjson = "3.1.0"
hpbandster = "0.7.4"
huggingface-hub = "0.26.5"
humanize = "4.11.0"
identify = "2.6.1"
idna = "3.10"
igraph = "0.11.8"
importlib-metadata = "8.5.0"
importlib-resources = "6.4.5"
iniconfig = "2.0.0"
installer = "0.7.0"
ipykernel = "6.29.5"
ipython = "8.27.0"
isort = "5.13.2"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.1.0"
jax = "0.4.36"
jaxlib = "0.4.36"
jedi = "0.19.1"
jeepney = "0.8.0"
jinja2 = "3.1.4"
joblib = "1.4.2"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
jupyter-client = "8.6.2"
jupyter-core = "5.7.2"
keyring = "25.6.0"
kiwisolver = "1.4.7"
legacy-api-wrap = "1.4.1"
leidenalg = "0.10.2"
lightning = "2.4.0"
lightning-utilities = "0.11.9"
linkify-it-py = "2.0.3"
loompy = "3.0.7"
mako = "1.3.8"
markdown = "3.7"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
matplotlib = "3.9.3"
matplotlib-inline = "0.1.7"
mccabe = "0.6.1"
mdformat = "0.7.19"
mdformat-gfm = "0.3.7"
mdformat-tables = "1.0.0"
mdit-py-plugins = "0.4.2"
mdurl = "0.1.2"
ml-collections = "1.0.0"
ml-dtypes = "0.5.0"
more-itertools = "10.5.0"
mpi4py = "4.0.1"
mpmath = "1.3.0"
msgpack = "1.1.0"
mudata = "0.3.1"
multidict = "6.1.0"
multipledispatch = "1.0.0"
multiprocess = "0.70.16"
mypy = "1.13.0"
mypy-extensions = "1.0.0"
natsort = "8.4.0"
nest-asyncio = "1.6.0"
netifaces = "0.11.0"
networkx = "3.4.2"
ninja = "1.11.1.2"
nltk = "3.9.1"
nodeenv = "1.9.1"
numba = "0.61.2"
numpy-groupies = "0.11.2"
numpyro = "0.16.1"
nvidia-cublas-cu12 = "12.4.5.8"
nvidia-cuda-cupti-cu12 = "12.4.127"
nvidia-cuda-nvrtc-cu12 = "12.4.127"
nvidia-cuda-runtime-cu12 = "12.4.127"
nvidia-cudnn-cu12 = "9.1.0.70"
nvidia-cufft-cu12 = "11.2.1.3"
nvidia-curand-cu12 = "10.3.5.147"
nvidia-cusolver-cu12 = "11.6.1.9"
nvidia-cusparse-cu12 = "12.3.1.170"
nvidia-nccl-cu12 = "2.21.5"
nvidia-nvjitlink-cu12 = "12.4.127"
nvidia-nvtx-cu12 = "12.4.127"
openpyxl = "3.1.5"
opt-einsum = "3.4.0"
optax = "0.2.4"
optuna = "4.1.0"
optuna-integration = "4.1.0"
orbax-checkpoint = "0.10.2"
packaging = "24.2"
pandas = "2.2.3"
pandas-stubs = "2.2.3.250527"
parso = "0.8.4"
pathspec = "0.12.1"
patsy = "1.0.1"
peft = "0.14.0"
pexpect = "4.9.0"
phate = "1.0.11"
pillow = "11.0.0"
pkginfo = "1.12.0"
platformdirs = "4.3.6"
pluggy = "1.5.0"
poetry = "2.0.1"
poetry-core = "2.0.1"
pot = "0.9.4"
pre-commit = "3.8.0"
prompt-toolkit = "3.0.47"
propcache = "0.2.1"
protobuf = "5.29.1"
psutil = "6.1.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
py-cpuinfo = "9.0.0"
pyarrow = "18.1.0"
pycodestyle = "2.8.0"
pycparser = "2.22"
pydantic = "2.9.1"
pydantic-core = "2.23.3"
pyflakes = "2.4.0"
pygments = "2.18.0"
pygsp = "0.5.1"
pynndescent = "0.5.13"
pyparsing = "3.2.0"
pyproject-hooks = "1.2.0"
pyro-api = "0.1.2"
pyro-ppl = "1.9.1"
pyro4 = "4.82"
pytest = "7.4.4"
python-dateutil = "2.9.0.post0"
pytorch-lightning = "2.4.0"
pytz = "2024.2"
pyudorandom = "1.0.0"
pyyaml = "6.0.2"
pyzmq = "26.2.0"
rapidfuzz = "3.11.0"
ray = "2.40.0"
referencing = "0.35.1"
regex = "2024.11.6"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
rpds-py = "0.22.3"
s-gd2 = "1.8.1"
safetensors = "0.4.5"
scanpy = "1.11.2"
scikit-learn = "1.5.2"
scikit-misc = "0.5.1"
scipy = "1.14.1"
scvi-tools = "1.3.1.post1"
seaborn = "0.13.2"
secretstorage = "3.3.3"
sentry-sdk = "2.19.2"
serpent = "1.41"
session-info = "1.0.0"
setproctitle = "1.3.4"
shellingham = "1.5.4"
simplejson = "3.19.3"
six = "1.17.0"
smmap = "5.0.1"
sparse = "0.15.4"
sqlalchemy = "2.0.36"
stack-data = "0.6.3"
statsmodels = "0.14.4"
stdlib-list = "0.11.0"
sympy = "1.13.1"
tasklogger = "1.2.0"
tdigest = "0.5.2.2"
tensorboard = "2.18.0"
tensorboard-data-server = "0.7.2"
tensorstore = "0.1.69"
texttable = "1.7.0"
threadpoolctl = "3.5.0"
tokenizers = "0.21.0"
tomli = "2.2.1"
tomlkit = "0.13.2"
toolz = "1.0.0"
torch = "2.5.1"
torchaudio = "2.5.1"
torchmetrics = "1.4.1"
torchvision = "0.20.1"
tornado = "6.4.1"
tqdm = "4.67.1"
traitlets = "5.14.3"
transformers = "4.47.0"
triton = "3.1.0"
trove-classifiers = "2025.1.10.15"
types-cffi = "1.16.0.20241221"
types-colorama = "0.4.15.20240311"
types-decorator = "5.1.8.20240310"
types-docutils = "0.21.0.20241128"
types-protobuf = "5.29.1.20241207"
types-psutil = "6.1.0.20241221"
types-pygments = "2.18.0.20240506"
types-pyopenssl = "24.1.0.20240722"
types-pytz = "2024.2.0.20241221"
types-pyyaml = "6.0.12.20241221"
types-redis = "4.6.0.20241004"
types-regex = "2024.11.6.20241221"
types-requests = "2.32.0.20241016"
types-setuptools = "75.6.0.20241126"
types-six = "1.17.0.20241205"
types-tabulate = "0.9.0.20241207"
types-tqdm = "4.67.0.20241221"
typing-extensions = "4.12.2"
tzdata = "2024.2"
uc-micro-py = "1.0.3"
umap-learn = "0.5.7"
urllib3 = "2.2.3"
virtualenv = "20.28.1"
wandb = "0.17.9"
wcwidth = "0.2.13"
werkzeug = "3.1.3"
wrapt = "1.16.0"
xarray = "2024.11.0"
xxhash = "3.5.0"
yarl = "1.18.3"
zipp = "3.21.0"
rouge-score = "^0.1.2"

